--- a/assets/adminMode.css
+++ b/assets/adminMode.css
@@ -1,1 +1,428 @@
+.headerBg,
+header,
+.headerNavBg,
+.headerNav,
+.contactUs {
+  margin-top: 67px;
+}
+
+/* masquer les boutons de resizing, rotate... pour les images(suneditor) */
+.se-controller.se-controller-resizing,
+.se-resize-dot {
+  display: none !important;
+}
+
+/*suppression de la possibilité d'insérer du texte en plus des images(suneditor)*/
+.se-line-breaker-component,
+.se-line-breaker {
+  display: none !important;
+}
+
+/*suppression de la possibilité d'insérer un lien à la place d'une image et suppression "adresse url du fichier" pour la fonction insérer une "image"(suneditor)*/
+.se-dialog-tabs,
+.se-dialog-body > div > .se-dialog-form:nth-of-type(2) {
+  display: none !important;
+}
+
+#saveBtn {
+  background-color: rgba(110, 232, 83);
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+#saveBtn:hover {
+  background-color: rgb(170, 247, 152);
+  cursor: pointer;
+}
+
+#logoutBtn:hover {
+  background-color: rgb(135, 147, 241);
+  cursor: pointer;
+}
+
+#restoreBtn:hover {
+  background-color: rgb(232, 104, 115);
+  cursor: pointer;
+}
+
+#restoreBtn {
+  position: relative;
+}
+
+#restoreBtn:hover::before {
+  content: "Cette action réinitialise tout le site au contenu d'origine. Toutes vos modifications seront perdues.";
+  position: absolute;
+  right: 0;
+  top: 60px;
+  width: 180px;
+  padding: 2px 5px;
+  font-size: 0.8rem;
+  color: red;
+  background-color: white;
+}
+
+#restoreBtn:hover::after {
+  content: "\0026A0";
+  position: absolute;
+  top: 60px;
+  right: 190px;
+  padding: 10px;
+  font-size: 2rem;
+  color: red;
+  background-color: white;
+}
+
+/********carousel*******/
+.carousel {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  width: 90%;
+  height: fit-content;
+  margin: auto;
+  border: 2px dashed green;
+  border-top: none;
+  background-color: var(--color0);
+}
+
+.slide {
+  display: flex;
+  flex-direction: column;
+  width: 220px;
+  align-items: center;
+  height: auto !important;
+  margin: 10px;
+}
+
+.slide .btnsContainer {
+  margin-top: 0;
+}
+
+.carouselImgContainer {
+  width: 220px;
+  height: 180px;
+  padding: 10px;
+}
+
+.carouselImgContainer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.slide .caption {
+  font-size: 1rem;
+  color: var(--color2);
+  border: 1px solid var(--color1T);
+  background-color: rgb(243, 243, 243, 0.8);
+  padding: 5px 5px;
+  margin: 10px;
+}
+/****End  carousel ***/
+
+/** galery images **/
+.galeryBtn {
+  position: fixed;
+  top: 5px;
+  left: 150px;
+  display: flex;
+  width: fit-content;
+  height: fit-content;
+  text-align: center;
+  padding: 5px;
+  font-size: 0.8rem;
+  color: var(--color0);
+  background-color: var(--color5);
+  border-radius: 10px;
+  cursor: pointer;
+  user-select: none;
+  z-index: 10000;
+}
+
+.galeryBtn:hover {
+  color: var(--color0);
+  background-color: var(--color4);
+}
+
+.galeryFrame {
+  display: none;
+}
+
+.galeryFrame.visible {
+  display: block;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 3000;
+}
+
+/*bouton changer body background*/
+#bg-customizer {
+  display: block;
+  position: fixed;
+  top: 100px;
+  left: 40px;
+  background-color: var(--color0);
+}
+
+#sectionsContainer {
+  margin: 100px auto;
+  background-color: var(--color0);
+}
+
+.section1,
+.section2,
+.section3,
+.section4 {
+  padding: 10px;
+  border: 2px dashed green;
+}
+
+.section1Content,
+.section2Content,
+.section3Content,
+.section4Content {
+  margin-top: 0;
+}
+
+.section1TextContainer,
+.section2TextContainer,
+.section3TextContainer,
+.section4TextContainer {
+  margin: 0;
+  padding: 0;
+}
+
+.sun-editor {
+  border: 2px dashed rgb(52, 79, 231);
+  border-top: none;
+}
+
+.toggle-info-container {
+  width: 90%;
+  text-align: center;
+  margin: auto;
+  padding: 10px;
+  background-color: var(--color0);
+}
+
+.toggle-info-container1 {
+  width: 90%;
+  text-align: center;
+  margin: auto;
+  padding: 10px;
+  background-color: var(--color0);
+  border: 2px dashed green;
+  border-bottom: none;
+}
+
+.toggle-info {
+  width: fit-content;
+  padding: 5px;
+  text-align: center;
+  cursor: pointer;
+  border: 1px solid var(--color1);
+  border-radius: 20px;
+  background-color: var(--color0);
+}
+
+.carousel-infosText1 {
+  display: none;
+  position: relative;
+  text-align: center;
+  width: 90%;
+  background-color: var(--color0);
+  margin: auto;
+  padding: 20px;
+  border-left: 2px dashed green;
+  border-right: 2px dashed green;
+}
+
+.infosText {
+  display: none;
+  position: relative;
+  width: 100%;
+  height: fit-content;
+  text-align: center;
+  padding: 60px 20px 20px 20px;
+  color: black;
+  font-size: 1rem;
+  background-color: var(--color0);
+}
+
+.carousel-infosText1 .close-info {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 0;
+  right: 0;
+  padding: 5px;
+  font-weight: bold;
+  border: 1px solid red;
+  cursor: pointer;
+  background-color: var(--color0);
+}
+
+.carousel-infosText1 ol,
+.carousel-infosText1 ul,
+#infosText2 ul,
+#infosText2 ol {
+  width: fit-content;
+  margin: auto;
+}
+
+.carousel-infosText1 ol li,
+.carousel-infosText1 ul li,
+#infosText2 ul li,
+#infosText2 ol li {
+  list-style-type: disc;
+  text-align: left;
+}
+
+.infosText .close-info {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 20px;
+  left: 50%;
+  padding: 5px;
+  font-weight: bold;
+  border: 1px solid red;
+  cursor: pointer;
+  background-color: var(--color0);
+}
+
+.infoDeleteBtn {
+  width: fit-content;
+  height: fit-content;
+  border-radius: 20px;
+  padding: 2px 5px 4px;
+  margin-left: 10px;
+  font-size: 0.8rem;
+}
+
+.infoSaveBtn {
+  background-color: rgba(110, 232, 83);
+  height: fit-content;
+  width: fit-content;
+  border-radius: 10px;
+  padding: 5px;
+  margin: auto;
+}
+
+.infoDeleteBtn {
+  background-color: rgba(232, 83, 95, 0.67);
+}
+
+.clockWise {
+  color: rgb(85, 83, 83);
+}
+
+.adminInfos {
+  font-size: 0.9rem;
+  color: var(--color1);
+}
+
+.saveSuppBtns {
+  display: flex;
+  width: fit-content;
+  height: fit-content;
+}
+
+.delete-content {
+  width: fit-content;
+  height: fit-content;
+  font-size: 0.6rem;
+  border: 2px solid transparent;
+  border-radius: 20px;
+  padding: 2px 5px 4px;
+  margin-left: 10px;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.delete-content {
+  background-color: rgba(232, 83, 95, 0.67);
+}
+
+.imgPBtns {
+  display: flex;
+  width: 100%;
+  height: fit-content;
+}
+
+.btnsContainer {
+  display: block;
+  width: 100%;
+  height: fit-content;
+  padding: 4px 0px;
+  margin-top: 20px;
+  border: 2px dashed rgb(52, 79, 231);
+  border-bottom: none;
+  background-color: var(--color0);
+}
+
+.container1 {
+  width: 35%;
+}
+
+.container2 {
+  width: 65%;
+}
+
+.adminInfos {
+  padding-left: 10px;
+}
+
+.alertInfo {
+  font-size: 0.7rem;
+  font-style: italic;
+  color: red;
+  padding-left: 10px;
+}
+
+/* map & footer contact-link*/
+.telContainer,
+.urlContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.telContainer {
+  margin-right: 10px;
+}
+
+.urlContainer {
+  margin-left: 10px;
+}
+
+.modifBloc_map {
+  background-color: var(--color0);
+  text-align: center;
+  width: 100%;
+  height: fit-content;
+  padding: 5px;
+  margin: auto;
+}
+
+.modifBloc {
+  background-color: var(--color0);
+  text-align: center;
+  padding: 5px;
+  width: fit-content;
+  height: fit-content;
+}
+
+.modifBloc .adminInfos {
+  margin: 0;
+  padding: 0;
+}
+
+#contactTel_input,
+#doctoLib_input,
+#googleMap_input {
+  width: 100%;
+  padding: 10px;
+  font-size: 1.1rem;
+  margin: auto;
+}
 
